--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -27,8 +27,8 @@ definitions:
           - set -o pipefail
           - | 
             # Create / update terraform docs
-            chmod +x scripts/tfm_docs.sh
-            source scripts/tfm_docs.sh
+            chmod +x ./scripts/tfm_docs.sh
+            source ./scripts/tfm_docs.sh
           - |
             # Update version
             chmod +x .bitbucket/bump.sh
