--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,3 +18,16 @@ jobs:
           user-email: "github-svc@ohpen.com"
           user-name: "GitHub Actions"
           version-prefix: "v"
+  tfm-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Render terraform docs inside the README.md
+        uses: terraform-docs/gh-actions@v0.11.0
+        with:
+          working-dir: modules/multi_step
+          output-file: README.md
+          output-method: inject
+          git-push: "true"
+          indention: 3
+          git-commit-message: "[tfm-docs][skip ci] - updating terraform docs"
