ci: LANZ-2200 terraform docs after semver in cd workflow

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,7 @@ jobs:
           user-name: "GitHub Actions"
           version-prefix: "v"
   tfm-docs:
+    needs: semver-changelog
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
